<resources>
    <string name="app_name">IF Bank</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home" translatable="false">Home</string>
    <string name="send_money">Send Money</string>
    <string name="view_balance">View Balance</string>
    <string name="view_transactions">View Transactions</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="login" translatable="false">Sign In</string>
    <string name="error_login">Login or Password isn\'t correct</string>
    <string name="food">food</string>
    <string name="data">data</string>
    <string name="rent">rent</string>
    <string name="candle">candle</string>
    <string name="utility">utility</string>
    <string name="deposit">Deposit</string>
    <string name="name">Name</string>
    <string name="remember">Remember-me</string>
    <string name="password" translatable="false">Password</string>
    <string name="amount">Amount</string>
    <string name="send">Send</string>
    <string name="recipment">Recipent</string>
    <string name="msg_sending">"Sending money to "</string>
    <string name="msg_confirmation">You have sent</string>
    <string name="money">Money</string>
    <string name="to">To</string>
    <string name="dolar">US$ 1</string>
    <string name="moeda">US$</string>
    <string name="value">US$ 200</string>
</resources>
