<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/money_data"
        app:layout_constraintEnd_toStartOf="@+id/money_data"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/utility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/utility"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/money_utility"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/candle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/rent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="56dp"
        android:text="@string/rent"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/money_rent"
        app:layout_constraintEnd_toStartOf="@+id/money_rent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="76dp"
        android:text="@string/data"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/money_food"
        app:layout_constraintEnd_toStartOf="@+id/money_data"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/candle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/candle"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/money_candles"
        app:layout_constraintEnd_toStartOf="@+id/money_candles"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/money_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="84dp"
        android:text="@string/value"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/money_utility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="92dp"
        android:text="@string/value"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money_candles"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/money_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="84dp"
        android:text="@string/value"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money_food" />

    <TextView
        android:id="@+id/money_rent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="84dp"
        android:text="@string/value"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money_data" />

    <TextView
        android:id="@+id/money_candles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="84dp"
        android:text="@string/value"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money_rent" />

</androidx.constraintlayout.widget.ConstraintLayout>